Inclusão do application-dev.properties

--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -1,13 +1,13 @@
 spring.application.name=unyleya-cidadao-backend
-server.port=3000
+server.port=8080
 
 # ===============================
 # = DATA SOURCE
 # ===============================
 # Set here configurations for the database connection
-spring.datasource.url=jdbc:postgresql://IP:PORTA/DB
-spring.datasource.username=USER
-spring.datasource.password=PASSWORD
+spring.datasource.url=jdbc:postgresql://localhost:5432/unyleya
+spring.datasource.username=postgres
+spring.datasource.password=123456
 spring.datasource.driver-class-name=org.postgresql.Driver
 # Keep the connection alive if idle for a long time (needed in production)
 spring.datasource.testWhileIdle=true
@@ -17,9 +17,5 @@ spring.datasource.validationQuery=SELECT 1
 # = JPA / HIBERNATE
 # ===============================
 # Show or not log for each sql query
-spring.jpa.show-sql=false
-# Hibernate ddl auto (create, create-drop, update): with "create-drop" the database
-# schema will be automatically created afresh for every start of application
-spring.jpa.hibernate.ddl-auto=none
+spring.jpa.show-sql=true
 
-spring.profiles.active=${ACTIVE_PROFILE:dev}
